--- a/main.scss
+++ b/main.scss
@@ -5,11 +5,12 @@
 }
 
 body {
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   line-height: 1.42857143;
   font-size: 18px;
   color: white;
-  background: url("https://thecakeisaliegaming.files.wordpress.com/2020/01/icutter-asteroid-field-03.jpg") no-repeat fixed center;
+  background: url('https://thecakeisaliegaming.files.wordpress.com/2020/01/icutter-asteroid-field-03.jpg')
+    no-repeat fixed center;
   background-size: cover;
   background-position: 50% 40px;
 }
@@ -107,7 +108,8 @@ body {
 }
 
 .nav-bar {
-  flex-basis: 350px;
+  flex: 0 1 350px;
+  display: flex;
 }
 
 .nav-list {
@@ -115,6 +117,10 @@ body {
   justify-content: space-around;
   list-style: none;
   background: lightyellow;
+}
+
+.burger-btn {
+  // display: inline;
 }
 
 .nav-link {
@@ -127,7 +133,8 @@ body {
   text-decoration: none;
 }
 
-.nav-bar a:hover, .nav-bar a:focus {
+.nav-bar a:hover,
+.nav-bar a:focus {
   color: #b45922;
 }
 /* End of header section styling */
@@ -143,7 +150,7 @@ body {
 
 h1 {
   font-size: 48px;
-  font-family: "Uncial Antiqua", "Quicksand", sans-serif;
+  font-family: 'Uncial Antiqua', 'Quicksand', sans-serif;
   font-style: italic;
   text-shadow: 2px 2px 4px #aaa;
 }
@@ -167,19 +174,19 @@ h1 {
 }
 
 .vidbox {
-	position: relative;
-	padding-bottom: 56.25%; /* forces video to resize with 16:9 aspect! */
-	padding-top: 25px;
+  position: relative;
+  padding-bottom: 56.25%; /* forces video to resize with 16:9 aspect! */
+  padding-top: 25px;
   height: 0;
   overflow: hidden;
 }
 
 .vidbox iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .small-text {
@@ -225,7 +232,8 @@ footer a {
   text-decoration: none;
 }
 
-footer a:hover, footer a:focus {
+footer a:hover,
+footer a:focus {
   color: white;
   text-decoration: underline;
 }
