--- a/main.css
+++ b/main.css
@@ -115,7 +115,10 @@ body {
   display: flex;
   justify-content: space-around;
   list-style: none;
-  background: lightyellow;
+}
+
+.burger-btn {
+  display: none;
 }
 
 .nav-link {
@@ -240,12 +243,17 @@ footer a:focus {
   body {
     font-size: 16px;
   }
-  #header {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
   .nav-link {
     padding: 0 0.5vw;
+  }
+  .burger-btn {
+    display: inline-block;
+  }
+  .nav-bar {
+    flex-basis: auto;
+  }
+  .nav-list {
+    display: none;
   }
   h1 {
     font-size: 42px;
@@ -272,7 +280,7 @@ footer a:focus {
   body {
     background-size: auto;
   }
-  #main {
+  .main {
     top: 50px;
   }
 }
