--- a/main.css
+++ b/main.css
@@ -107,7 +107,6 @@ body {
 }
 
 .nav-bar {
-  flex: 0 1 350px;
   display: flex;
 }
 
@@ -244,17 +243,40 @@ footer a:focus {
   body {
     font-size: 16px;
   }
-  .nav-link {
+  .header {
+    justify-content: space-between;
+    padding: 0;
+  }
+  .nav-bar li {
     padding: 0 0.5vw;
+    font-size: 1.4rem;
+    display: block;
+    list-style-type: none;
   }
   .burger-btn {
     display: inline-block;
   }
   .nav-bar {
-    flex-basis: auto;
+    display: block;
+    position: relative;
+    margin: 0;
   }
   .nav-list {
     display: none;
+    text-align: center;
+    position: absolute;
+    background-color: lightblue;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+    right: 0;
+    top: 45px;
+  }
+  .nav-list.open {
+    display: block;
+  }
+  .nav-link {
+    display: block;
   }
   h1 {
     font-size: 42px;
