--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,9 @@
+$orange-text: #b45922;
+$orange-link: orange;
+$dark-grey: #1f1f1f;
+$header-blue: lightblue;
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -31,7 +37,7 @@ body {
 }
 
 .orange-text {
-  color: #b45922;
+  color: $orange-text;
 }
 
 .dshadow {
@@ -83,12 +89,12 @@ body {
 }
 /* end of general styling classes */
 
-/* Start of header section styling */
+/* HEADERER SECTION STYLING start */
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: lightblue;
+  background-color: $header-blue;
   position: fixed;
   z-index: 1;
   width: 100%;
@@ -120,11 +126,65 @@ body {
 
 .burger-btn {
   display: none;
+  font-size: 1.8rem;
   cursor: pointer;
+  margin-right: 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  &:hover, &:focus {
+    color: $orange-text;
+    text-shadow: 1px 1px 2px $dark-grey;
+    filter: brightness(120%);
+  }
 }
 
 .nav-link {
   padding: 0 0.8vw;
+}
+
+@media (max-width: 1024px) {
+  .header {
+    padding: 0;
+  }
+
+  .nav-bar li {
+    padding: 0 0.5vw;
+    font-size: 1.4rem;
+    display: block;
+    list-style-type: none;
+  }
+
+  .burger-btn {
+    display: inline-block;
+  }
+
+  .nav-bar {
+    display: block;
+    position: relative;
+    margin: 0;
+  }
+
+  .nav-list {
+    display: none;
+    text-align: center;
+    position: absolute;
+    background-color: $header-blue;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+    right: 0;
+    top: 45px;
+  }
+
+  .nav-list.open {
+    display: block;
+  }
+
+  .nav-link {
+    display: block;
+  }
 }
 
 .nav-bar a {
@@ -243,55 +303,6 @@ footer a:focus {
 @media (max-width: 1024px) {
   body {
     font-size: 16px;
-  }
-
-  // .header {
-  //   flex-wrap: wrap;
-  //   justify-content: center;
-  // }
-
-  .header {
-    // flex-direction: row-reverse;
-    justify-content: space-between;
-    padding: 0;
-  }
-
-  .nav-bar li {
-    padding: 0 0.5vw;
-    font-size: 1.4rem;
-    display: block;
-    list-style-type: none;
-  }
-
-  .burger-btn {
-    display: inline-block;
-
-  }
-
-  .nav-bar {
-    display: block;
-    position: relative;
-    margin: 0;
-  }
-
-  .nav-list {
-    display: none;
-    text-align: center;
-    position: absolute;
-    background-color: lightblue;
-    width: 100vw;
-    padding: 0;
-    margin: 0;
-    right: 0;
-    top: 45px;
-  }
-
-  .nav-list.open {
-    display: block;
-  }
-
-  .nav-link {
-    display: block;
   }
 
   h1 {
