--- a/main.css
+++ b/main.css
@@ -91,13 +91,12 @@ body {
   position: fixed;
   z-index: 1;
   width: 100%;
-  min-height: 75px;
-  padding: 2px 15px 2px 5px;
+  height: 75px;
   box-shadow: 0px 1px 8px #3399ff;
 }
 
 .logo {
-  margin-right: 5px;
+  margin: 0 5px;
 }
 
 .logo img {
@@ -108,12 +107,17 @@ body {
 
 .nav-bar {
   display: flex;
+  margin-right: 15px;
 }
 
 .nav-list {
   display: flex;
   justify-content: space-around;
   list-style: none;
+}
+
+.nav-link {
+  padding: 0 0.8vw;
 }
 
 .burger-btn {
@@ -131,10 +135,6 @@ body {
   color: #b45922;
   text-shadow: 1px 1px 2px #1f1f1f;
   filter: brightness(120%);
-}
-
-.nav-link {
-  padding: 0 0.8vw;
 }
 
 @media (max-width: 1024px) {
@@ -164,7 +164,7 @@ body {
     padding: 0;
     margin: 0;
     right: 0;
-    top: 45px;
+    top: 50px;
   }
   .nav-list.open {
     display: block;
