--- a/main.scss
+++ b/main.scss
@@ -145,14 +145,11 @@ body {
   }
 }
 
+// media query to control burger-btn & dropdown
 @media (max-width: 1024px) {
-  .header {
-    padding: 0;
-  }
-
   .nav-bar li {
     padding: 0 0.5vw;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     display: block;
     list-style-type: none;
   }
@@ -175,8 +172,13 @@ body {
     width: 100vw;
     padding: 0;
     margin: 0;
+    padding-bottom: 10px;
     right: 0;
-    top: 50px;
+    top: 55px;
+    box-shadow: 0px 8px 8px -8px #3399ff;
+    -webkit-animation: showMenu 0.5s;
+    animation: showMenu 0.5s;
+    transform-origin: top center;
   }
 
   .nav-list.open {
@@ -192,6 +194,30 @@ body {
   color: #3399ff;
   font-weight: 600;
   text-decoration: none;
+
+  @-webkit-keyframes showMenu {
+    0% {
+      transform: scaleY(0);
+    }
+    80% {
+      transform: scaleY(1.2); /* creates a snapback effect */
+    }
+    100% {
+      transform: scaleY(1);
+    }
+  }
+
+  @keyframes showMenu {
+    0% {
+      transform: scaleY(0);
+    }
+    80% {
+      transform: scaleY(1.2); /* creates a snapback effect */
+    }
+    100% {
+      transform: scaleY(1);
+    }
+  }
 }
 
 .nav-bar a:hover,
