--- a/main.css
+++ b/main.css
@@ -164,15 +164,16 @@ body {
     right: 0;
     top: 55px;
     box-shadow: 0px 8px 8px -8px #3399ff;
-    -webkit-animation: showMenu 0.5s;
-    animation: showMenu 0.5s;
-    transform-origin: top center;
-  }
-  .nav-list.open {
-    display: block;
   }
   .nav-link {
     display: block;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* overrides jQ inline "display: block" when enlarging screen after opening menu */
+  .nav-list {
+    display: flex !important;
   }
 }
 
@@ -180,32 +181,6 @@ body {
   color: #3399ff;
   font-weight: 600;
   text-decoration: none;
-}
-
-@-webkit-keyframes showMenu {
-  0% {
-    transform: scaleY(0);
-  }
-  80% {
-    transform: scaleY(1.2);
-    /* creates a snapback effect */
-  }
-  100% {
-    transform: scaleY(1);
-  }
-}
-
-@keyframes showMenu {
-  0% {
-    transform: scaleY(0);
-  }
-  80% {
-    transform: scaleY(1.2);
-    /* creates a snapback effect */
-  }
-  100% {
-    transform: scaleY(1);
-  }
 }
 
 .nav-bar a:hover,
