--- a/main.css
+++ b/main.css
@@ -5,7 +5,14 @@
 }
 
 html {
-  font-size: 1.125rem;
+  font-size: 112.5%;
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 100%;
+    /* lets us pass content block into mixin */
+  }
 }
 
 body {
@@ -27,7 +34,14 @@ body {
 .main {
   position: relative;
   top: 75px;
-  width: 100%;
+  width: 100vw;
+}
+
+@media only screen and (max-width: 480px) {
+  .main {
+    top: 25px;
+    /* lets us pass content block into mixin */
+  }
 }
 
 /* Start of SHARED CLASSES*/
@@ -48,7 +62,7 @@ body {
 }
 
 .fcontainer {
-  width: 100%;
+  width: 100vw;
   padding: 50px 50px 20px 50px;
   margin: 0 auto;
   display: flex;
@@ -119,9 +133,16 @@ body {
   background-color: lightblue;
   position: fixed;
   z-index: 1;
-  width: 100%;
+  width: 100vw;
   height: 75px;
   box-shadow: 0px 1px 8px #3399ff;
+}
+
+@media only screen and (max-width: 480px) {
+  .header {
+    height: 50px;
+    /* lets us pass content block into mixin */
+  }
 }
 
 .logo {
@@ -130,7 +151,6 @@ body {
 
 .logo img {
   display: block;
-  min-width: 400px;
   max-width: 100%;
 }
 
@@ -167,19 +187,15 @@ body {
 }
 
 @media (max-width: 1024px) {
+  .nav-bar {
+    display: block;
+    position: relative;
+  }
   .nav-bar li {
     padding: 0 0.5vw;
     font-size: 1.8rem;
     display: block;
     list-style-type: none;
-  }
-  .burger-btn {
-    display: inline-block;
-  }
-  .nav-bar {
-    display: block;
-    position: relative;
-    margin: 0;
   }
   .nav-list {
     display: none;
@@ -196,6 +212,9 @@ body {
   }
   .nav-link {
     display: block;
+  }
+  .burger-btn {
+    display: inline-block;
   }
 }
 
@@ -234,16 +253,33 @@ h1 {
   text-shadow: 2px 2px 4px #aaa;
 }
 
+@media only screen and (max-width: 480px) {
+  h1 {
+    font-size: 2rem;
+    /* lets us pass content block into mixin */
+  }
+}
+
 .heading {
-  margin-bottom: 25px;
+  margin-bottom: 1.4rem;
 }
 
 .heading p {
   font-size: 2rem;
 }
 
-.blurb {
-  font-size: 1.6rem;
+@media only screen and (max-width: 480px) {
+  .heading p {
+    font-size: 1.6rem;
+    /* lets us pass content block into mixin */
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .blurb {
+    font-size: 1.2rem;
+    /* lets us pass content block into mixin */
+  }
 }
 
 /* End of ABOUT SECTION */
