--- a/main.scss
+++ b/main.scss
@@ -68,7 +68,7 @@ body {
 
 .fcontainer {
   width: 100vw;
-  padding: 50px 50px 20px 50px;
+  padding: 2.78rem 2.78rem 1.1rem;
   margin: 0 auto;
   display: flex;
   @include mq(1024px) {
