--- a/main.css
+++ b/main.css
@@ -138,13 +138,6 @@ body {
   box-shadow: 0px 1px 8px #3399ff;
 }
 
-@media only screen and (max-width: 480px) {
-  .header {
-    height: 50px;
-    /* lets us pass content block into mixin */
-  }
-}
-
 .logo {
   margin: 0 5px;
 }
@@ -156,7 +149,7 @@ body {
 
 .nav-bar {
   display: flex;
-  margin-right: 15px;
+  padding-right: 0.8rem;
 }
 
 .nav-list {
@@ -173,7 +166,7 @@ body {
   display: none;
   font-size: 1.8rem;
   cursor: pointer;
-  margin-right: 10px;
+  padding-right: 0.55rem;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -222,6 +215,12 @@ body {
   /* hack to overrides jQ inline "display: block" when enlarging screen after opening menu */
   .nav-list {
     display: flex !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .burger-btn {
+    padding-right: 0;
   }
 }
 
