--- a/main.scss
+++ b/main.scss
@@ -131,10 +131,6 @@ body {
   width: 100vw;
   height: 75px;
   box-shadow: 0px 1px 8px #3399ff;
-  @include mq(480px) {
-    height: 50px;
-  }
-
 }
 
 .logo {
@@ -149,7 +145,7 @@ body {
 
 .nav-bar {
   display: flex;
-  margin-right: 15px;
+  padding-right: 0.8rem;
 }
 
 .nav-list {
@@ -166,7 +162,7 @@ body {
   display: none;
   font-size: 1.8rem;
   cursor: pointer;
-  margin-right: 10px;
+  padding-right: 0.55rem;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -226,6 +222,12 @@ body {
   /* hack to overrides jQ inline "display: block" when enlarging screen after opening menu */
   .nav-list {
     display: flex !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .burger-btn {
+    padding-right: 0;
   }
 }
 
