--- a/main.css
+++ b/main.css
@@ -19,7 +19,9 @@ body {
   font-family: 'Quicksand', sans-serif;
   line-height: 1.42857143;
   color: white;
-  background: url("https://thecakeisaliegaming.files.wordpress.com/2020/01/icutter-asteroid-field-03.jpg") no-repeat fixed center;
+  background-image: url("https://thecakeisaliegaming.files.wordpress.com/2020/01/icutter-asteroid-field-03.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   background-position: 50% 40px;
 }
@@ -77,7 +79,7 @@ body {
 
 @media only screen and (max-width: 480px) {
   .fcontainer {
-    padding: 2.0rem 2.0rem 0.8rem;
+    padding: 2rem 2rem 0.8rem;
     /* lets us pass content block into mixin */
   }
 }
