--- a/main.scss
+++ b/main.scss
@@ -26,17 +26,39 @@ body {
   font-family: 'Quicksand', sans-serif;
   line-height: 1.42857143;
   color: white;
-  background: {
-    image: url('https://thecakeisaliegaming.files.wordpress.com/2020/01/icutter-asteroid-field-03.jpg');
-    repeat: no-repeat;
-    attachment: fixed;
-    size: cover;
-    position: 50% 40px;
-  }
+  // background: {
+  //   image: url('https://thecakeisaliegaming.files.wordpress.com/2020/01/icutter-asteroid-field-03.jpg');
+  //   repeat: no-repeat;
+  //   attachment: fixed;
+  //   size: cover;
+  //   position: 50% 40px;
+  // }
+  //
+  // @include mq(480px) {
+  //   background-size: auto;
+  // }
+}
 
-  @include mq(480px) {
-    background-size: auto;
-  }
+body:after {
+  /* addresses iOS issue with fixed cover background */
+content: '';
+position: fixed; /* stretch a fixed position to the whole screen */
+top: 0;
+height: 100vh; /* fix for mobile browser address bar appearing disappearing */
+left: 0;
+right: 0;
+z-index: -1; /* needed to keep in the background */
+
+background: {
+  image: url('https://thecakeisaliegaming.files.wordpress.com/2020/01/icutter-asteroid-field-03.jpg');
+  repeat: no-repeat;
+  size: cover;
+  position: 50% 40px;
+}
+
+@include mq(480px) {
+  background-size: auto;
+}
 }
 
 .main {
